--- a/Dockerfile.worker
+++ b/Dockerfile.worker
@@ -17,6 +17,7 @@ RUN apt-get update && apt-get install -y \
     ncurses-bin \
     libreadline-dev \
     bash-completion \
+    gdal-bin \
     locales && \
     ln -fs /usr/share/zoneinfo/$TZ /etc/localtime && \
     echo $TZ > /etc/timezone && \
