--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ tqdm = "4.67.1"
 plotly = "6.0.0"
 msgpack = "^1.1.0"
 celery = {extras = ["redis"], version = "^5.4.0"}
+aiohttp = "^3.11.13"
 
 [tool.poetry.group.dev.dependencies]
 jupyter = "1.1.1"
