--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ plotly = "6.0.0"
 msgpack = "^1.1.0"
 celery = {extras = ["redis"], version = "^5.4.0"}
 aiohttp = "^3.11.13"
+filelock = "^3.18.0"
 
 [tool.poetry.group.dev.dependencies]
 jupyter = "1.1.1"
