--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,8 @@ celery = {extras = ["redis"], version = "^5.4.0"}
 aiohttp = "^3.11.13"
 filelock = "^3.18.0"
 aiofiles = "^24.1.0"
+pvl = "^1.3.2"
+cachetools = "^5.5.2"
 
 [tool.poetry.group.dev.dependencies]
 jupyter = "1.1.1"
