--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ filelock = "^3.18.0"
 aiofiles = "^24.1.0"
 pvl = "^1.3.2"
 cachetools = "^5.5.2"
+requests-cache = "^1.2.1"
 
 [tool.poetry.group.dev.dependencies]
 jupyter = "1.1.1"
