Upgrade simulation pipeline

--- a/.env_example
+++ b/.env_example
@@ -6,9 +6,9 @@ MASTER_IP=localhost
 CONCURRENCY=6
 
 # Local path to the working volume of the worker
-UTILITY_VOLUME=/media/mglos/HDD_8TB5/TMP
+UTILITY_VOLUME=/media/mglos/HDD_8TB6/TMP
 
 # If we don't want to keep the dynamic kernels, set to 1
 PURGE_DYNAMIC_KERNELS=
 
-SUPRESS_TQDM=true
+SUPRESS_TQDM=false
