Add env example

--- a/.env_example
+++ b/.env_example
@@ -12,3 +12,11 @@ UTILITY_VOLUME=/media/mglos/HDD_8TB6/TMP
 PURGE_DYNAMIC_KERNELS=
 
 SUPRESS_TQDM=false
+
+
+LOG_LEVEL=WARNING
+
+# Do not save datafiles into RAM, use disk
+SAVE_DATAFILES_TO_RAM=0
+
+
