--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,7 @@ services:
     ports:
       - "27017:27017"
     volumes:
-      - /media/mglos/HDD_8TB14/MONGO:/data/db
+      - "${MONGO_DB_VOLUME}:/data/db"
     environment:
       MONGO_INITDB_ROOT_USERNAME: admin
       MONGO_INITDB_ROOT_PASSWORD: password
@@ -18,7 +18,7 @@ services:
     ports:
       - "6379:6379"
     volumes:
-      - /media/mglos/HDD_8TB14/REDIS:/data
+      - "${REDIS_VOLUME}:/data"
     restart: always
     command: redis-server --save 60 1 --loglevel warning
 
