Add README.md in full extent

--- a/.env_example
+++ b/.env_example
@@ -6,7 +6,7 @@ MASTER_IP=localhost
 CONCURRENCY=6
 
 # Local path to the working volume of the worker
-UTILITY_VOLUME=/media/mglos/HDD_8TB6/TMP
+UTILITY_VOLUME=
 
 # If we don't want to keep the dynamic kernels, set to 1
 PURGE_DYNAMIC_KERNELS=
